--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,8 @@
 
 :root {
     --bg-body: #242A32;
+    --color-primary: #131219;
+    --text-color: #f4f3f3;
 }
 html, body {
     background-color: var(--bg-body);
@@ -21,7 +23,7 @@ header {
     align-items: center;
 }
 
-h1,h2, h3, h4, h5, h6{
+h1, h2, h3, h4, h5, h6{
     margin: 0;
 }
 
@@ -54,4 +56,55 @@ nav a{
 
 .link-container img{
     margin-right: 10px;
+}
+
+.card-movies{
+    width: 250px;
+    /* height: 400px; */
+}
+
+#card-movies-list {
+    padding: 40px 10px;
+}
+
+.card-movies img {
+    width: 100%;
+    border-radius: 8px 8px 0 0;
+
+}
+
+.card-movies-description {
+    height: 220px;
+    padding: 10px 0 20px 0;
+    background-color: var(--color-primary);
+    color: var(--text-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 0 0 8px 8px;
+}
+
+.card-movies-description h3 {
+    font-size: 16px;
+    font-weight: 700;
+    margin-bottom: 25px;
+    text-align: center;
+}
+
+.movies-btn {
+    width: 150px;
+    height: 50px;
+    background-color: var(--bg-body);
+    color: var(--text-color);
+    font-size: 16px;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50px;
+}
+
+.movies-btn:hover {
+    background-color: rgb(198, 33, 151) ;
 }
