--- a/css/styles.css
+++ b/css/styles.css
@@ -10,11 +10,16 @@
     --bg-body: #242A32;
     --color-primary: #131219;
     --text-color: #f4f3f3;
+    --text-form: #92929D;
+    --star-yellow: #FFBB3a;
+
 }
+
 html, body {
     background-color: var(--bg-body);
     --color-primary: #131219;
 }
+
 header {
     background-color: var(--color-primary);
     color: #fff;
@@ -70,7 +75,6 @@ nav a{
 .card-movies img {
     width: 100%;
     border-radius: 8px 8px 0 0;
-
 }
 
 .card-movies-description {
@@ -103,8 +107,72 @@ nav a{
     align-items: center;
     justify-content: center;
     border-radius: 50px;
+    border: 0;
 }
 
 .movies-btn:hover {
     background-color: rgb(198, 33, 151) ;
+}
+
+.score-container {
+    padding: 40px 0;
+    max-width: 480px;
+}
+
+.card-score-description {
+    background-color: var(--color-primary);
+    color: var(--text-color);
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 0 0 8px 8px;
+}
+
+.movies-form-btn {
+    height: 120px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.movies-form-group{
+    margin: 20px;
+
+}
+
+.movies-form-group label{
+    font-size: 12px;
+    color: var(--text-form);
+}
+
+.card-score-description h3{
+    font-size: 14px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.movies-card-description-star{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.movies-card-description h4{
+    font-size: 16px;
+    font-weight: 700;
+    color: var(--start-yellow);
+}
+
+.movies-card-description-star img{
+    width: 22px;
+    margin-bottom: 10px;
+}
+
+.movies-card-description-star p{
+    font-size: 12px;
+    font-weight: 400;
+    color: var(--text-form);
+    margin-bottom: 10px;
 }
